gcloud/k8s/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: neurobridge
  annotations:
    cloud.google.com/backend-config: '{"default":"backend-api-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: backend-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
